Wed Aug 09 18:06:40 2000  Pradeep  <pradeep@cs.wustl.edu>

        * ACE version 5.1.8 released.

Wed Aug 09 10:10:45 2000  David L. Levine <levine@cs.wustl.edu>

        * tests/CDR_Array_Test.cpp: disabled LongLong test if
          the platform doesn't have native long long support.
          ACE's long long emulation doesn't have sufficient
          capability to support what the test needs.
          Thanks to Peter Kroener <peter.kroener@icn.siemens.de>
          for reporting this. [Bug 632]


Tue Aug 08 10:35:04 2000  Rich Seibel <seibel_r@ociweb.com>

        * ace/config-sunos5.8.h: added.  We have compiled successfully
          with it on Solaris 8.0 using both gcc 2.95.2 and Sun 5.0 compilers.
          It simply includes the 5.7 config.h file.  I have noted that there
          are some possible efficiencies which autoconfig finds, but this
          works.

Mon Aug  7 21:05:35 2000  Vishal Kachroo  <vishal@cs.wustl.edu>

        * examples/QOS/server.dsp:
        * examples/QOS/client.dsp: Made changes to add the relative path
          for aced.lib.

Mon Aug 07 07:31:23 2000  Peter Fischer <fischer@softec.de>

        * ace/OS.cpp (cond_timedwait): on VxWorks, handle
          S_objLib_OBJ_UNAVAILABLE by setting error to ETIME
          if msec_timeout is 0.  This allows Message_Queue_Test
          to succeed.

        * tests/run_tests.vxworks:  re-enabled Message_Queue_Test.

Sun Aug  6 21:40:42 2000  Darrell Brunsch <brunsch@uci.edu>

        * ace/OS.i:
        * ace/OS.cpp:
        * ace/OS_String.cpp:
        * ace/OS_String.h:
        * ace/OS_String.inl:
        * ace/ace_wchar.h:
        * ace/config-all.h
        * ace/config-linux-common.h:
        * ace/config-win32-common.h:

          Fixed up miscellaneous problems with ACE_HAS_WCHAR on Linux.
          Highlights are:

          - Added ACE_HAS_VFWPRINTF and ACE_HAS_VFWPRINTF to NOTSUP a
            couple of methods, since they don't seem to be available yet.