@@ -1,3 +1,9 @@
+Wed Aug  9 13:28:20 2000  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>
+
+	* ace/Message_Queue_T.cpp (dequeue_head_i): Make sure to reset
+	  head_ and tail_ to 0 when the cur_count_ drops to 0.  Thanks to
+ 	  Zoran Ivanovic <Zoran_Ivanovic@i2.com> for this fix.
+
 Wed Aug 09 18:06:40 2000  Pradeep  <pradeep@cs.wustl.edu>
 
         * ACE version 5.1.8 released.
