@@ -569,14 +569,14 @@ also receives other options that are specific to it. <P>
   <tr>
     <td><tt>-GIh </tt><i>arg</i></td>
 
-    <td>Servant implemenation header file name ending</td>
+    <td>Servant implementation header file name ending</td>
     <td>&nbsp;</td>
   </tr>
 
   <tr>
     <td><tt>-GIs </tt><i>arg</i></td>
 
-    <td>Servant implemenation skeleton file name ending</td>
+    <td>Servant implementation skeleton file name ending</td>
     <td>&nbsp;</td>
   </tr>
 
