@@ -6,20 +6,31 @@ READMEs on how to run the following performance tests:
 
         . Cubit
 
-          This directory contains performance tests for COOL,
-          CORBAplus, Hardpack, Orbix, TAO, and VisiBroker.  These
-          tests measure the latency, jitter, CPU utilization, and
+          This directory contains performance tests for TAO that
+          measure the latency, jitter, CPU utilization, and
           priority inversion of these ORBs.
 
-        . Demux  (*NOTE* This is still under development)
+        . Latency
 
-          This tests various demultiplexing strategies used in TAO.
+          This is a simple latency test, single threaded and
+          multi-threaded clients and servers are included.  
+
+        . POA
+        
+          Various tests of the TAO's POA performance.
+
+        . Pluggable
+
+          The tests in this directory time the latency contributed by
+          various parts of the ORB, but mostly the emphasis is on the
+          contribution due to the pluggable protocols code.  
+
+        . RTCorba
+
+          Tests for various real-time features (RT CORBA spec & TAO-specific).
 
         . Thruput
 
           Throughput tests for TAO, VisiBroker, and Orbix based on
           TTCP.
 
-        . RTCorba
-
-          Tests for various real-time features (RT CORBA spec & TAO-specific).
