@@ -1032,7 +1032,12 @@ Hans Utz <hans.utz@student.uni-ulm.de>
 Askok Kumar Kalanithi <k_ashok_kumar@yahoo.com>
 Chris Able <cable@scires.com>
 John Hiltenbrand <jhiltenb@uiuc.edu>
+Steve Hespelt <shespelt@bear.com>
 Peter Fischer <fischer@softec.de>
+Madhu Ramachandran <mramacha@atdsprint.com>
+Caleb Epstein <cae@home.com>
+Bruno Marconi <bmarconi@jetstream.com>
+Ken Childress <kchildre@uccs.jpl.nasa.gov>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson.  Paul devised the recursive Makefile scheme that
